--- a/SmartTech/Views/Account/Profile.cshtml
+++ b/SmartTech/Views/Account/Profile.cshtml
@@ -1,5 +1,9 @@
 ﻿@model ProfileViewModel
 
+@{
+    ViewBag.Title = Model.FirstName;
+}
+
 
 <div class="profile mb-5" style="position: absolute;
                                       top: 0; margin-bottom: 50px;
