--- a/SmartTech/Views/Admin/AdminProfile.cshtml
+++ b/SmartTech/Views/Admin/AdminProfile.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = "Layout";
+    ViewBag.Title = Model.FirstName;
 }
 
 <div class="row my-5" id="">
@@ -36,7 +37,7 @@
                 </div>
               
                     
-                    <h5 class="card-title text-primary mt-3">Adminstration Information</h5>
+                    <h5 class="card-title text-primary mt-3">Administration Information</h5>
                     <hr/>
                     <div class="row">
                         <div class="col-md-6">
