--- a/SmartTech/Views/Home/Blog.cshtml
+++ b/SmartTech/Views/Home/Blog.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewBag.Title = "SmartTech Blog";
 }
 
 <div class="container my-5">
     <div class="row">
         <div class="col-12">
-            <h3 class="display-4">About Us</h3>
+            <h3 class="display-4">Blog</h3>
         </div>
     </div>
 </div>
