--- a/SmartTech/Views/Admin/AdminEdit.cshtml
+++ b/SmartTech/Views/Admin/AdminEdit.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = "Layout";
+    ViewBag.Title = "Edit Profile";
 }
 
 <div class="row my-5" id="">
@@ -32,7 +33,7 @@
             <label asp-for="Email"></label><span class="text-danger">*</span>
             <div class="input-group-sm input-group">
               <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fa fa-envelope"></i></span>
+                <span class="input-group-text"><img src="/images/envelope.svg" height="20px" width="20px"/></span>
               </div>
               <input type="text" asp-for="Email" class="form-control" value="@Model.Email" id="email" required>
               <span asp-validation-for="Email"></span>
@@ -43,7 +44,7 @@
             <label asp-for="PhoneNumber"></label><span class="text-danger">*</span>
             <div class="input-group-sm input-group">
               <div class="input-group-prepend">
-                <span class="input-group-text"><i class="fa fa-phone"></i></span>
+                <span class="input-group-text"><img src="/images/mobile-alt.svg" height="20px" width="20px"/></span>
               </div>
               <input type="text" asp-for="PhoneNumber" class="form-control" value="@Model.PhoneNumber" id="phone" required>
               <span asp-validation-for="PhoneNumber"></span>
@@ -96,7 +97,7 @@
 
         <div class="mb-3 input-group-sm">
           <label asp-for="ProfilePictureUrl"></label>
-          <input type="file" name="ProfilePictureUrl" asp-for="ProfilePictureUrl" class="form-control" id="picture" required/>
+          <input type="file" name="ProfilePictureUrl" asp-for="ProfilePictureUrl" class="form-control-file" id="picture" required/>
           <span asp-validation-for="ProfilePictureUrl"></span>
         </div>
 
