--- a/SmartTech/Views/Admin/Index.cshtml
+++ b/SmartTech/Views/Admin/Index.cshtml
@@ -2,6 +2,7 @@
 
 @{
     Layout = "Layout";
+    ViewBag.Title = "Staffs List";
 }
 
 <div class="row my-5">
@@ -15,7 +16,7 @@
 </div>
 
 <div class="row mt-5 tab-content current" id="all">
-    <div class="col-md-12 mt-1 col-sm-12">
+    <div class="col-md-12 mt-1 mb-5 col-sm-12">
         <table class="table table-hover table-striped">
             <thead class="thead-light">
             <tr>
@@ -47,7 +48,7 @@
 </div>
 
 <div class="row mt-5 tab-content" id="active">
-    <div class="col-md-12 mt-1 col-sm-12">
+    <div class="col-md-12 mt-1 mb-5 col-sm-12">
         <table class="table table-hover table-striped">
             <thead class="thead-light">
             <tr>
@@ -80,7 +81,7 @@
 
 
 <div class="row mt-5 tab-content" id="pending">
-    <div class="col-md-12 mt-1 col-sm-12">
+    <div class="col-md-12 mt-1 mb-5 col-sm-12">
         <table class="table table-hover table-striped">
             <thead class="thead-light">
             <tr>
