--- a/SmartTech/Views/Admin/Layout.cshtml
+++ b/SmartTech/Views/Admin/Layout.cshtml
@@ -8,16 +8,11 @@
     <title>@ViewData["Title"] - SmartTech</title>
 
     <environment names="Development">
-        <link rel="stylesheet" href="~/css/fontawesome-all.css"/>
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css"/>
         <link rel="stylesheet" href="~/css/datepicker.css"/>
         <link rel="stylesheet" href="~/css/dashboard.css"/>
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" 
-              integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" 
-              asp-fallback-href="~/css/fontawesome-all.min.css"
-              crossorigin="anonymous">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
@@ -29,7 +24,7 @@
 </head>
 <body>
    <nav class="navbar navbar-light fixed-top bg-light flex-md-nowrap p-0 shadow">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" asp-controller="Home" asp-action="Index"><img src="/images/strikethrough.svg" height="30px" width="30px"/></a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" asp-controller="Home" asp-action="Index"><img src="/images/brand.svg" alt="brand" height="30px" width="30px"/></a>
       <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
