--- a/SmartTech/wwwroot/css/site.css
+++ b/SmartTech/wwwroot/css/site.css
@@ -6,6 +6,7 @@ html {
 
 body{
     background-color: #fff;
+    width: 100%;
 
 }
 .footer {
@@ -13,35 +14,22 @@ body{
     bottom: 0;
     left: 0;
     width: 100%;
-   
     max-height: 40px;
     line-height: 40px; 
-    background-color: #f5f5f5;
+    
 }
 .container {
     max-width: 960px;
 }
 
 
-/*
- * Custom translucent site header
- */
+
 /* NAVBAR*/
-.header {
-    max-height: 40px;
-    padding-top: 0px; !important;
-    background-color: rgba(0, 0, 0, .85) !important;
-    -webkit-backdrop-filter: saturate(180%) blur(20px);
-    backdrop-filter: saturate(180%) blur(20px);
-    font-size: small;
-    
-}
-.header a {
-    color: #999;
+.navigation a {
     transition: ease-in-out color .15s;
 }
-.header a:hover {
-    color: #fff;
+.navigation a:hover {
+    color: #916fff;
     text-decoration: none;
 }
 
@@ -56,13 +44,9 @@ body{
 /* HEADER OVERLAY */
 #home-section {
     width: 100% !important;
-    
-    background: url("../images/home-layout.png") no-repeat;
-    min-height: 250px;
+    background: url("../images/smart.jpg") no-repeat;
+    min-height: 400px;
     background-size: cover;
-    position: absolute;
-    top: 0;
-    left: 0;
     background-attachment: fixed; }
 #home-section .dark-overlay {
     background-color: rgba(0, 0, 0, 0.7);
@@ -70,14 +54,14 @@ body{
     top: 0;
     left: 0;
     width: 100%;
-    min-height: 250px; }
+    min-height: 452px; }
 #home-section .home-inner {
-    padding-top: 150px; }
+    padding-top: 150px;
+     }
 
 #services{
-    margin-top: 270px;
+    margin-top: 0;
 }
-
 
 .hide{
     display: none;
@@ -103,4 +87,12 @@ body{
     width: 100%;
 }
 
-
+.access{
+    margin: 0 auto;
+}
+#back{
+    cursor: pointer;
+}
+.rotate{
+    transform: rotate(-30deg);
+}
